Sipariş Döküm Sayfası

--- a/Logistic.UILayer/Views/Order/Index.cshtml
+++ b/Logistic.UILayer/Views/Order/Index.cshtml
@@ -22,9 +22,9 @@
     {
         <tr>
             <td>@item.Order_ID</td>
-            <td>@item.TBL_CUSTOMER.CustomerName</td>
+            <td>@item.TBL_CUSTOMER.CustomerName @item.TBL_CUSTOMER.CustomerSurname</td>
             <td>@item.TBL_CITY.CityName</td>
-            <td>@item.TBL_CITY.CityName</td>
+            <td>@item.TBL_CITY1.CityName</td>
             <td>@item.OrderProduct</td>
             <td>@item.OrderSize</td>
             <td>@item.OrderPrice</td>
