--- a/Logistic.UILayer/Views/Admin/PartialSidebar.cshtml
+++ b/Logistic.UILayer/Views/Admin/PartialSidebar.cshtml
@@ -5,16 +5,12 @@
     <div style="border-top:1px ridge rgba(255, 255, 255, 0.15)"></div>
     <div class="menu">
         <ul id="menu">
-            <li><a href="index.html"><i class="fa fa-home"></i> <span>Ana Sayfa</span></a></li>
-            <li id="menu-academico">
-                <ul id="menu-academico-sub">
-                    <li id="menu-academico-avaliacoes"><a href="shoes.html">Kategoriler</a></li>
-                    <li id="menu-academico-avaliacoes"><a href="products.html">Müşteriler</a></li>
-                    <li id="menu-academico-boletim"><a href="sunglasses.html">Personeller</a></li>
-                </ul>
-            </li>
-            <li id="menu-academico"><a href="sunglasses.html"><i class="fa fa-road"></i> <span>Rotalar</span></a></li>
-            <li><a href="sweater.html"><i class="fa fa-pencil"></i> <span>Şehirler</span></a></li>
+            <li><a href="/Dashboard/Index/"><i class="fa fa-home"></i> <span>Ana Sayfa</span></a></li>
+            <li><a href="/Category/Index/"><i class="fa fa-home"></i> <span>Kategoriler</span></a></li>
+            <li><a href="/Dashboard/Index/"><i class="fa fa-home"></i> <span>Müşteriler</span></a></li>
+            <li><a href="/Dashboard/Index/"><i class="fa fa-home"></i> <span>Personeller</span></a></li>
+            <li><a href="/City/Index/"><i class="fa fa-home"></i> <span>Rotalar</span></a></li>
+            <li><a href="/Order/Index/ "><i class="fa fa-pencil"></i> <span>Siparişler</span></a></li>
             <li><a href="bags.html"><i class="fa fa-paperclip"></i> <span>Ülkeler</span></a></li>
             <li><a href="bags.html"><i class="fa fa-paperclip"></i> <span>Grafikler</span></a></li>
             <li><a href="bags.html"><i class="fa fa-paperclip"></i> <span>Raporlar</span></a></li>
