--- a/Logistic.UILayer/Views/Admin/PartialSidebar.cshtml
+++ b/Logistic.UILayer/Views/Admin/PartialSidebar.cshtml
@@ -8,7 +8,7 @@
             <li><a href="/Dashboard/Index/"><i class="fa fa-home"></i> <span>Ana Sayfa</span></a></li>
             <li><a href="/Category/Index/"><i class="fa fa-home"></i> <span>Kategoriler</span></a></li>
             <li><a href="/Dashboard/Index/"><i class="fa fa-home"></i> <span>Müşteriler</span></a></li>
-            <li><a href="/Dashboard/Index/"><i class="fa fa-home"></i> <span>Personeller</span></a></li>
+            <li><a href="/Profile/Index/"><i class="fa fa-home"></i> <span>Profilim</span></a></li>
             <li><a href="/City/Index/"><i class="fa fa-home"></i> <span>Rotalar</span></a></li>
             <li><a href="/Order/Index/ "><i class="fa fa-pencil"></i> <span>Siparişler</span></a></li>
             <li><a href="bags.html"><i class="fa fa-paperclip"></i> <span>Ülkeler</span></a></li>
