--- a/Logistic.UILayer/Views/Profile/Index.cshtml
+++ b/Logistic.UILayer/Views/Profile/Index.cshtml
@@ -5,4 +5,8 @@
 }
 
 <h2>Profil Bilgileri Sayfası</h2>
+<h4>Hoşgeldiniz :@ViewBag.v1</h4>
+<h4>Soyadınız :@ViewBag.v2</h4>
+<h4>Telefon Numaranız :@ViewBag.v3</h4>
+
 
