--- a/Logistic.UILayer/Views/Login/Index.cshtml
+++ b/Logistic.UILayer/Views/Login/Index.cshtml
@@ -21,7 +21,7 @@
         <div class="login-bottom">
             <form method="post">
                 <div class="text">
-                    <input type="text" placeholder="Adınızı Giriniz" required="" name="CustomerName" />
+                    <input type="text" placeholder="Mail Adresinizi Giriniz" required="" name="CustomerMail" />
 
                     <div class="clear"> </div>
 
